--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.8.1",
+    "vue-router": "^4.1.3",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
