--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
+    "vue-cli-plugin-app-config": "^1.0.14",
     "vue-cookie": "^1.1.4",
     "vue-cookies": "^1.8.1",
     "vue-router": "^4.1.3",
